--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -89,6 +89,6 @@
         
     </div>
     <a href="#" class="btn btn-danger">Botón</a>
-    <footer class="col-12 text-center bg-verde p-2 fixed-bottom">Creado por Luis Navas</footer>
+    <footer class="col-12 text-center bg-verde p-2 fixed-bottom">Creado por Sebastian desaloms</footer>
 </body>
 </html>
