--- a/ejercicios/index.html
+++ b/ejercicios/index.html
@@ -45,26 +45,53 @@
       
 
       <div class="row">
-        <div class="card col-4">
-            <img src="./" class="card-img-top" alt="...">
+                <div class="card-group">
+          <div class="card">
+            <img src="./img/html5.jpg" class="card-img-top" alt="..." style="width:400px;height:200px;">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title">titulo 1</h5>
+              <p class="card-text">Contenido de card</p>
+              <p class="card-text"><small class="text-muted">ultima actualizacion 3 mins atras</small></p>
             </div>
           </div>
-          <div class="card col-4">
-            <img src="..." class="card-img-top" alt="...">
+          <div class="card">
+            <img src="./img/css.png" class="card-img-top" alt="..." style="width:400px;height:200px;">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title">titulo 2</h5>
+              <p class="card-text">              <p class="card-text">Contenido de card</p>
+            </p>
+              <p class="card-text"><small class="text-muted">ultima actualizacion 3 mins atras</small></p>
             </div>
           </div>
-          <div class="card col-4">
-            <img src="..." class="card-img-top" alt="...">
+          <div class="card">
+            <img src="./img/bootstrap.png" class="card-img-top" alt="..." style="width:375px;height:200px;">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title">titulo 3</h5>
+              <p class="card-text">              <p class="card-text">Contenido de card</p>
+            </p>
+              <p class="card-text"><small class="text-muted">ultima actualizacion 3 mins atras</small></p>
             </div>
           </div>
+        </div>
 
       </div>
+
+      <form>
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Email</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <div id="emailHelp" class="form-text">Nunca comparta su mail.</div>
+        </div>
+        <div class="mb-3">
+          <label for="exampleInputPassword1" class="form-label">Contraseña</label>
+          <input type="password" class="form-control" id="exampleInputPassword1">
+        </div>
+        <div class="mb-3 form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1">Verificar</label>
+        </div>
+        <button type="submit" class="btn btn-primary">Enviar</button>
+      </form>
 
     
 </div>
