grid galeria ejercicio

--- a/actividad unidad 3 css/index.html
+++ b/actividad unidad 3 css/index.html
@@ -9,10 +9,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/ejerBoot.css">
 
-    <title>Ejercicio boostrap</title>
+    <title>Actividad unidad 3</title>
   </head>
   <body>
-       <div class="container">
+       <div class="container-fluid">
        
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
@@ -64,7 +64,7 @@
             </div>
           </div>
           <div class="card">
-            <img src="./img/bootstrap.png" class="card-img-top" alt="..." style="width:375px;height:200px;">
+            <img src="./img/bootstrap.png" class="card-img-top" alt="..." style="height:100%;">
             <div class="card-body">
               <h5 class="card-title">titulo 3</h5>
               <p class="card-text">              <p class="card-text">Contenido de card</p>
