--- a/javascript/index.html
+++ b/javascript/index.html
@@ -14,11 +14,14 @@
 <body>
     <!-- Start your code here -->
     <h1 class="text-center">javascript</h1>
-    <button id="btn" class="btn btn-primary">sumar</button>
+    <!-- <button id="btn" class="btn btn-primary">sumar</button>  -->
     <div class="container">
         <div class="row" id="principal"> </div>
     </div>
-    <script src="./clase3.js"></script>
+
+
+
+    <script src="./clase4.js"></script>
 
 </body>
 
