entre primer integra

--- a/acti_integradora/index.html
+++ b/acti_integradora/index.html
@@ -145,7 +145,8 @@
     <div class="text-center">
         <p class="fs-7">CONVIERTETE EN UN</p>
         <p class="fs-3"> ORADOR</p>
-        <p><span id="textdeco">ORADOR</span></p>
+        <p class="fs-7">Anotate como orador para dar una <span id="textdeco"> charla ignite.</span> Cuentanos de que
+            quieres hablar! </p>
     </div>
 
     <!-- aca terminan container de cards -->
@@ -169,6 +170,10 @@
         </div>
     </div>
     <!-- aca termina segundo row de card con img -->
+
+
+
+
 
     <!-- aca empieza form -->
 
@@ -196,6 +201,36 @@
 
     </div>
     <!-- aca termina el form -->
+
+    <!-- aca empieza el footer -->
+    <div id="footer" class="d-flex container-fluid mt-3 justify-content-evenly "
+        style="background: linear-gradient(90deg, rgba(36,34,68,1) 0%, rgb(30, 94, 109) 100%);">
+        <ul class="nav m-3 gap-5 p-3">
+            <li class="nav-item">
+                <a class="nav-link text-white" href="#">Preguntas frecuentes</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-white" href="#">Contáctanos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-white" href="#">Prensa</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-white">Conferencias</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-white">Términos y condiciones</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-white">Privacidad</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-white">Estudiantes</a>
+            </li>
+        </ul>
+    </div>
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
