--- a/acti_integradora/index.html
+++ b/acti_integradora/index.html
@@ -53,155 +53,160 @@
     </nav>
     <!-- aca termina nav -->
 
-    <!-- aca empieza carosuel-->
+    <section id="seccion">
 
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="./img/ba1.jpg" class="d-block w-100" alt="...">
+        <!-- aca empieza carosuel-->
+
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./img/ba1.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/ba2.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/ba3.jpg" class="d-block w-100" alt="...">
+                </div>
             </div>
-            <div class="carousel-item">
-                <img src="./img/ba2.jpg" class="d-block w-100" alt="...">
+
+
+            <div class="carousel-caption d-flex d-md-block col-6">
+
+                <h1 class="text-end">Conf Bs As</h1>
+                <p class="text-end">BsAs llega por primera vez a Argentina. Un evento para compartir con nuestra
+                    comunidad
+                    el conocimiento de
+                    los expertos que estan creando el futuro de internet. Ven a conocer a miembros del evento, a otros
+                    estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos!
+                </p>
+                <p class="text-end"> <a href="#" class="btn btn btn-outline-light btn-transparent" id="botonUno">Quiero
+                        ser
+                        orador</a>
+                    <a href="#" class="btn btn-primary" style="background-color: green;"
+                        onclick="comprarTicket()">Comprar
+                        tickets</a>
+                </p>
+
+
             </div>
-            <div class="carousel-item">
-                <img src="./img/ba3.jpg" class="d-block w-100" alt="...">
-            </div>
+        </div>
+        <div class="text-center">
+            <p class="fs-6">CONOCE A LOS</p>
+            <p class="fs-3"> ORADORES</p>
         </div>
 
 
-        <div class="carousel-caption d-flex d-md-block col-6">
+        <!-- comienza card -->
+        <div class="container">
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="./img/steve.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <span class="badge bg-warning text-dark">Javascript</span>
+                            <span class="badge bg-info text-dark">React</span>
+                            <h5 class="card-title">Steve Jobs</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
 
-            <h1 class="text-end">Conf Bs As</h1>
-            <p class="text-end">BsAs llega por primera vez a Argentina. Un evento para compartir con nuestra
-                comunidad
-                el conocimiento de
-                los expertos que estan creando el futuro de internet. Ven a conocer a miembros del evento, a otros
-                estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos!
-            </p>
-            <p class="text-end"> <a href="#" class="btn btn btn-outline-light btn-transparent" id="botonUno">Quiero
-                    ser
-                    orador</a>
-                <a href="#" class="btn btn-primary" style="background-color: green;">Comprar tickets</a>
-            </p>
-
-
-        </div>
-    </div>
-    <div class="text-center">
-        <p class="fs-6">CONOCE A LOS</p>
-        <p class="fs-3"> ORADORES</p>
-    </div>
-
-
-    <!-- comienza card -->
-    <div class="container">
-        <div class="row row-cols-1 row-cols-md-3 g-4">
-            <div class="col">
-                <div class="card h-100">
-                    <img src="./img/steve.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <span class="badge bg-warning text-dark">Javascript</span>
-                        <span class="badge bg-info text-dark">React</span>
-                        <h5 class="card-title">Steve Jobs</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
                     </div>
-
                 </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="./img/bill.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <span class="badge bg-warning text-dark">Javascript</span>
-                        <span class="badge bg-info text-dark">React</span>
-                        <h5 class="card-title">Bill gates</h5>
-                        <p class="card-text">This card has supporting text below as a natural lead-in to additional
-                            content.
-                        </p>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="./img/bill.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <span class="badge bg-warning text-dark">Javascript</span>
+                            <span class="badge bg-info text-dark">React</span>
+                            <h5 class="card-title">Bill gates</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.
+                            </p>
+                        </div>
+
                     </div>
-
                 </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="./img/ada.jpeg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <span class="badge bg-secondary">Negocios</span>
-                        <span class="badge bg-danger">StartUps</span>
-                        <h5 class="card-title">Ada Lovelace</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This card has even longer content than the first to show that equal
-                            height
-                            action.</p>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="./img/ada.jpeg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <span class="badge bg-secondary">Negocios</span>
+                            <span class="badge bg-danger">StartUps</span>
+                            <h5 class="card-title">Ada Lovelace</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height
+                                action.</p>
+                        </div>
+
                     </div>
+                </div>
+            </div>
+            <!-- aca termina cards -->
+        </div>
 
+        <div class="text-center">
+            <p class="fs-7">CONVIERTETE EN UN</p>
+            <p class="fs-3"> ORADOR</p>
+            <p class="fs-7">Anotate como orador para dar una <span id="textdeco"> charla ignite.</span> Cuentanos de que
+                quieres hablar! </p>
+        </div>
+
+        <!-- aca terminan container de cards -->
+
+        <!-- segunda row -->
+
+        <div class="card text-white bg-dark mb-3">
+            <div class="row g-0">
+                <div class="col-md-6">
+                    <img src="./img/honolulu.jpg" class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-6">
+                    <div class="card-body  mb-3">
+                        <h5 class="card-title">Bs Octubre</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, id nam quo
+                            sequi modi consequuntur impedit! Dicta optio voluptatibus expedita repudiandae aperiam odio,
+                            debitis laboriosam?</p>
+                        <a href="#" class="btn btn-outline-light btn-transparent">Conoce mas</a>
+                    </div>
                 </div>
             </div>
         </div>
-        <!-- aca termina cards -->
-    </div>
+        <!-- aca termina segundo row de card con img -->
 
-    <div class="text-center">
-        <p class="fs-7">CONVIERTETE EN UN</p>
-        <p class="fs-3"> ORADOR</p>
-        <p class="fs-7">Anotate como orador para dar una <span id="textdeco"> charla ignite.</span> Cuentanos de que
-            quieres hablar! </p>
-    </div>
 
-    <!-- aca terminan container de cards -->
 
-    <!-- segunda row -->
 
-    <div class="card text-white bg-dark mb-3">
-        <div class="row g-0">
-            <div class="col-md-6">
-                <img src="./img/honolulu.jpg" class="img-fluid rounded-start" alt="...">
-            </div>
-            <div class="col-md-6">
-                <div class="card-body  mb-3">
-                    <h5 class="card-title">Bs Octubre</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, id nam quo
-                        sequi modi consequuntur impedit! Dicta optio voluptatibus expedita repudiandae aperiam odio,
-                        debitis laboriosam?</p>
-                    <a href="#" class="btn btn-outline-light btn-transparent">Conoce mas</a>
+
+        <!-- aca empieza form -->
+
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <input type="text" class="form-control" placeholder="Nombre" aria-label="First name">
+                </div>
+                <div class="col">
+                    <input type="text" class="form-control" placeholder="Apellido" aria-label="Last name">
                 </div>
             </div>
-        </div>
-    </div>
-    <!-- aca termina segundo row de card con img -->
+            <div class="form-floating">
+                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
+                    style="height: 100px"></textarea>
 
+                <label for="floatingTextarea2"> <span id="textoC"> Sobre que quieres hablar?</span></label>
+                <div id="emailHelp" class="form-text">Recuerda inclur un titulo para tu charla.</div>
+                <div class="d-grid gap-2">
+                    <button class="btn btn-success" style="height: 60px; font-size: 20px ;"
+                        type="button">Enviar</button>
 
-
-
-
-    <!-- aca empieza form -->
-
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <input type="text" class="form-control" placeholder="Nombre" aria-label="First name">
-            </div>
-            <div class="col">
-                <input type="text" class="form-control" placeholder="Apellido" aria-label="Last name">
-            </div>
-        </div>
-        <div class="form-floating">
-            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
-                style="height: 100px"></textarea>
-
-            <label for="floatingTextarea2"> <span id="textoC"> Sobre que quieres hablar?</span></label>
-            <div id="emailHelp" class="form-text">Recuerda inclur un titulo para tu charla.</div>
-            <div class="d-grid gap-2">
-                <button class="btn btn-success" style="height: 60px; font-size: 20px ;" type="button">Enviar</button>
+                </div>
 
             </div>
 
         </div>
-
-    </div>
-    <!-- aca termina el form -->
-
+        <!-- aca termina el form -->
+    </section>
     <!-- aca empieza el footer -->
     <div id="footer" class="d-flex container-fluid mt-3 justify-content-evenly "
         style="background: linear-gradient(90deg, rgba(36,34,68,1) 0%, rgb(30, 94, 109) 100%);">
@@ -231,7 +236,7 @@
     </div>
 
 
-
+    <script src="app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
     </script>
